--- a/StudyiOS/Main/studyInfo.plist
+++ b/StudyiOS/Main/studyInfo.plist
@@ -24,6 +24,13 @@
 					<string>dangdang</string>
 				</array>
 			</dict>
+            <key>lianchu</key>
+            <dict>
+                <key>CFBundleIconFiles</key>
+                <array>
+                    <string>lianchu</string>
+                </array>
+            </dict>
 		</dict>
 		<key>Primary Icon</key>
 		<dict>
